--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
         "@typescript-eslint/parser": "^6.7.4",
         "babel-loader": "^9.1.3",
         "eslint": "^8.50.0",
+        "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.28.1",
         "jest": "^29.7.0",
         "rimraf": "^5.0.5",
         "terser-webpack-plugin": "^5.3.9",
